Reviewing all files

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -204,10 +204,32 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":27.95,\"feels_like\":16.25,\"temp_min\":26.01,\"temp_max\":30,\"pressure\":1025,\"humidity\":64},\"visibility\":10000,\"wind\":{\"speed\":11.5,\"deg\":50},\"clouds\":{\"all\":90},\"dt\":1613282426,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1613302917,\"sunset\":1613340906},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "<Response [200]>"
       ]
      },
      "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":32.95,\"feels_like\":26.6,\"temp_min\":30.99,\"temp_max\":34,\"pressure\":1025,\"humidity\":74},\"visibility\":10000,\"wind\":{\"speed\":3.44,\"deg\":60},\"clouds\":{\"all\":90},\"dt\":1613345489,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1613302917,\"sunset\":1613340906},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -231,16 +253,16 @@
        "   'description': 'overcast clouds',\n",
        "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 27.95,\n",
-       "  'feels_like': 16.25,\n",
-       "  'temp_min': 26.01,\n",
-       "  'temp_max': 30,\n",
+       " 'main': {'temp': 32.95,\n",
+       "  'feels_like': 26.6,\n",
+       "  'temp_min': 30.99,\n",
+       "  'temp_max': 34,\n",
        "  'pressure': 1025,\n",
-       "  'humidity': 64},\n",
+       "  'humidity': 74},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 11.5, 'deg': 50},\n",
+       " 'wind': {'speed': 3.44, 'deg': 60},\n",
        " 'clouds': {'all': 90},\n",
-       " 'dt': 1613282426,\n",
+       " 'dt': 1613345489,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -252,7 +274,7 @@
        " 'cod': 200}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -339,16 +361,16 @@
        "   'description': 'overcast clouds',\n",
        "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 27.95,\n",
-       "  'feels_like': 16.25,\n",
-       "  'temp_min': 26.01,\n",
-       "  'temp_max': 30,\n",
+       " 'main': {'temp': 32.95,\n",
+       "  'feels_like': 26.6,\n",
+       "  'temp_min': 30.99,\n",
+       "  'temp_max': 34,\n",
        "  'pressure': 1025,\n",
-       "  'humidity': 64},\n",
+       "  'humidity': 74},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 11.5, 'deg': 50},\n",
+       " 'wind': {'speed': 3.44, 'deg': 60},\n",
        " 'clouds': {'all': 90},\n",
-       " 'dt': 1613282426,\n",
+       " 'dt': 1613345489,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -360,7 +382,7 @@
        " 'cod': 200}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +419,7 @@
        " 'sunset': 1613340906}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +439,7 @@
        "'US'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,16 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1613282426"
+       "1613345489"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 30 64 90 11.5\n"
+      "42.3584 -71.0598 34 74 90 3.44\n"
      ]
     }
    ],
@@ -471,16 +493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-02-14 06:00:26'"
+       "'2021-02-14 23:31:29'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,16 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1613284942.730691"
+       "1613345970.155422"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
