--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -20,8 +20,8 @@
     "from scipy import stats\n",
     "import requests\n",
     "import gmaps\n",
-    "\n",
-    "g_key = \"AIzaSyDZ7PG3tVJsvsybS6ST2sefVhG0JQKl0j8\""
+    "# Import the API key.\n",
+    "from config import g_key"
    ]
   },
   {
@@ -866,7 +866,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db437756a64b4e0aa2777fa9ee5ed853",
+       "model_id": "ec391e2b3be1491f81b588aedf397eb0",
        "version_major": 2,
        "version_minor": 0
       },
