--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'g_key' from 'config' (C:\\Users\\patla\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\config\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7ab0376162ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# Import the API key.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mg_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'g_key' from 'config' (C:\\Users\\patla\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\config\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# Import dependencies.\n",
     "import pandas as pd\n",
@@ -26,139 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City_ID</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Current Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Hilo</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-02-15 02:56:52</td>\n",
-       "      <td>19.7297</td>\n",
-       "      <td>-155.0900</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>69</td>\n",
-       "      <td>20</td>\n",
-       "      <td>14.97</td>\n",
-       "      <td>few clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Raudeberg</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>2021-02-15 02:56:52</td>\n",
-       "      <td>61.9875</td>\n",
-       "      <td>5.1352</td>\n",
-       "      <td>41.00</td>\n",
-       "      <td>57</td>\n",
-       "      <td>100</td>\n",
-       "      <td>24.00</td>\n",
-       "      <td>light rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ushuaia</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>2021-02-15 02:56:52</td>\n",
-       "      <td>-54.8000</td>\n",
-       "      <td>-68.3000</td>\n",
-       "      <td>48.20</td>\n",
-       "      <td>66</td>\n",
-       "      <td>75</td>\n",
-       "      <td>5.88</td>\n",
-       "      <td>broken clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mataura</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>2021-02-15 02:56:52</td>\n",
-       "      <td>-46.1927</td>\n",
-       "      <td>168.8643</td>\n",
-       "      <td>59.00</td>\n",
-       "      <td>70</td>\n",
-       "      <td>96</td>\n",
-       "      <td>14.00</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Maniitsoq</td>\n",
-       "      <td>GL</td>\n",
-       "      <td>2021-02-15 02:56:53</td>\n",
-       "      <td>65.4167</td>\n",
-       "      <td>-52.9000</td>\n",
-       "      <td>4.08</td>\n",
-       "      <td>88</td>\n",
-       "      <td>77</td>\n",
-       "      <td>12.33</td>\n",
-       "      <td>broken clouds</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   City_ID       City Country                 Date      Lat       Lng  \\\n",
-       "0        0       Hilo      US  2021-02-15 02:56:52  19.7297 -155.0900   \n",
-       "1        1  Raudeberg      NO  2021-02-15 02:56:52  61.9875    5.1352   \n",
-       "2        2    Ushuaia      AR  2021-02-15 02:56:52 -54.8000  -68.3000   \n",
-       "3        3    Mataura      NZ  2021-02-15 02:56:52 -46.1927  168.8643   \n",
-       "4        4  Maniitsoq      GL  2021-02-15 02:56:53  65.4167  -52.9000   \n",
-       "\n",
-       "   Max Temp  Humidity  Cloudiness  Wind Speed Current Description  \n",
-       "0     80.60        69          20       14.97          few clouds  \n",
-       "1     41.00        57         100       24.00          light rain  \n",
-       "2     48.20        66          75        5.88       broken clouds  \n",
-       "3     59.00        70          96       14.00     overcast clouds  \n",
-       "4      4.08        88          77       12.33       broken clouds  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Import the WeatherPy_database.csv file. \n",
     "city_data_df = pd.read_csv(\"../weather_data/WeatherPy_Database.csv\")\n",
@@ -167,20 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is your minimum temperature preference?\n",
-      "min_temp: 65\n",
-      "What is your maximum temperature preference?\n",
-      "max_temp: 90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Prompt the user to enter minimum and maximum temperature criteria \n",
     "print(\"What is your minimum temperature preference?\")\n",
